--- a/nvidiagpubeat.full.yml
+++ b/nvidiagpubeat.full.yml
@@ -25,8 +25,17 @@
 nvidiagpubeat:
   # Defines how often an event is sent to the output
   period: 1s
-  query: "utilization.gpu,utilization.memory,memory.total,memory.free,memory.used,temperature.gpu,pstate"
-  env: "test"
+  system:
+    - cuda_version
+    - driver_version
+  gpu:
+    - memory
+    - name
+    - temperature
+    - utilization
+  # If true, addes the home path to the Environment Path
+  # Used if the nvidia tool is in the home directory
+  add_home_path: true
 
 #================================ General ======================================
 
